--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<center>
 		<table id="topbartable" cellpadding="13">
 		<tr>
-			<td><a id="topbarlink" href="http://zh.wikipedia.org/wiki/User:Xudifsd" target="_blank">My WikiUser page</a></td>
-			<td><a id="topbarlink" href="http://www.douban.com/people/xudifsd/" target="_blank">My douban page</a></td>
-			<td><a id="topbarlink" href="http://www.follow5.com/xudifsd" target="_blank">My microblog</a></td>
-			<td><a id="topbarlink" href="http://xudifsd.appspot.com/" target="_blank">My blog</a></td>
+			<td><a id="topbarlink" href="http://zh.wikipedia.org/wiki/User:Xudifsd">My WikiUser page</a></td>
+			<td><a id="topbarlink" href="http://www.douban.com/people/xudifsd/">My douban page</a></td>
+			<td><a id="topbarlink" href="http://www.follow5.com/xudifsd">My microblog</a></td>
+			<td><a id="topbarlink" href="http://xudifsd.appspot.com/">My blog</a></td>
 		</tr>
 		</table>
 		</center>
@@ -24,7 +24,7 @@
 	<div id="separater"></div>
 	<div id="body">
 		<p>Hello everybody, My name is Xu Di, this is a Chinese name, so that my first name is Di, my last name is Xu, and on the Internet I always use xudifsd as my username.</p><br/>
-		<p>I'm a undergraduate student and very interested in open source project. I've been using Ubuntu operator system for many years, and <a href="http://www.ubuntu.com/" target="_blank">Ubuntu Official website</a> inspired me when I create this page. I can use C, <a href="http://python.org/" target="_blank">Python</a>, Java and JavaScript to program. I'm learning to use jQuery right now. So I create <a href="http://xudifsd.github.com/deleteAds/">deleteAds</a> to practice.</p><br/>
+		<p>I'm a undergraduate student and very interested in open source project. I've been using Ubuntu operator system for many years, and <a href="http://www.ubuntu.com/">Ubuntu Official website</a> inspired me when I create this page. I can use C, <a href="http://python.org/">Python</a>, Java and JavaScript to program. I'm learning to use jQuery right now. So I create <a href="http://xudifsd.github.com/deleteAds/">deleteAds</a> to practice.</p><br/>
 	</div>
 	<div id="separater"></div>
 	<div id="hr"></div>
