update my blog url

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<td><a id="topbarlink" href="http://zh.wikipedia.org/wiki/User:Xudifsd">My WikiUser page</a></td>
 			<td><a id="topbarlink" href="http://www.douban.com/people/xudifsd/">My douban page</a></td>
 			<td><a id="topbarlink" href="http://www.follow5.com/xudifsd">My microblog</a></td>
-			<td><a id="topbarlink" href="http://xudifsd.appspot.com/">My blog</a></td>
+			<td><a id="topbarlink" href="http://xudifsd.info/blog/">My blog</a></td>
 		</tr>
 		</table>
 		</center>
